...
                                    <segments>
                                        <segment title="Todos"/>
                                        <segment title="Promoções"/>
                                    </segments>
                                    <color key="tintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
...
                    </collectionView>
                    <navigationItem key="navigationItem" id="xbA-EA-cob">
                        <barButtonItem key="rightBarButtonItem" title="Item" image="bagCart" id="kXq-FD-NaA">
                            <connections>
                                <segue destination="pYi-1F-pom" kind="presentation" id="UYQ-cv-yFH"/>
...
                                <nil key="highlightedColor"/>
                                <userDefinedRuntimeAttributes>
                                    <userDefinedRuntimeAttribute type="string" keyPath="accessibilityIdentifier" value="priceLabel"/>
                                </userDefinedRuntimeAttributes>
                            </label>
...
                                </constraints>
                                <fontDescription key="fontDescription" type="boldSystem" pointSize="24"/>
                                <state key="normal" title="Comprar">
                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                </state>
...
                                        <real key="value" value="10"/>
                                    </userDefinedRuntimeAttribute>
                                    <userDefinedRuntimeAttribute type="string" keyPath="accessibilityIdentifier" value="discountLabel"/>
                                </userDefinedRuntimeAttributes>
                            </label>
...
                                                <nil key="highlightedColor"/>
                                                <userDefinedRuntimeAttributes>
                                                    <userDefinedRuntimeAttribute type="string" keyPath="accessibilityIdentifier" value="shippingLabel"/>
                                                </userDefinedRuntimeAttributes>
                                            </label>
...
                                                <nil key="highlightedColor"/>
                                                <userDefinedRuntimeAttributes>
                                                    <userDefinedRuntimeAttribute type="string" keyPath="accessibilityIdentifier" value="totalLabel"/>
                                                </userDefinedRuntimeAttributes>
                                            </label>
...
                                        </constraints>
                                        <fontDescription key="fontDescription" type="boldSystem" pointSize="24"/>
                                        <state key="normal" title="Finalizar Compra">
                                            <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                        </state>
...
